--- a/Seeds_Classification.ipynb
+++ b/Seeds_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "Seeds_Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPcNpPzDhpKBTyqpZ3WkW1F",
+      "authorship_tag": "ABX9TyMO7M1ufqkXoWi1KgoqMuCI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2055,15 +2055,14 @@
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "k_values = []\n",
+        "k_values = {}\n",
         "for i in range (2,9):\n",
         "  knn = KNeighborsClassifier(n_neighbors=i)\n",
         "  knn.fit(x_train, y_train)\n",
-        "  k_values.append([i,knn.score(x_train, y_train)])\n",
-        "  #print(\"The k value is: \", i)\n",
-        "  #print(\"The accuracy is: \", knn.score(x_train, y_train))\n"
+        "  v = {i:knn.score(x_train,y_train)}\n",
+        "  k_values.update(v)"
       ],
-      "execution_count": 113,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -2073,28 +2072,57 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5gwWsgjESdwQ",
-        "outputId": "c17cca65-9454-4655-c4de-0127cc03bd59"
+        "outputId": "6c7aebea-f05b-4d4c-a342-331923e160de"
       },
       "source": [
         "k_values"
       ],
-      "execution_count": 114,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[2, 0.9859154929577465],\n",
-              " [3, 0.9859154929577465],\n",
-              " [4, 0.9788732394366197],\n",
-              " [5, 0.9647887323943662],\n",
-              " [6, 0.9647887323943662],\n",
-              " [7, 0.9436619718309859],\n",
-              " [8, 0.9366197183098591]]"
+              "{2: 0.9859154929577465,\n",
+              " 3: 0.9859154929577465,\n",
+              " 4: 0.9788732394366197,\n",
+              " 5: 0.9647887323943662,\n",
+              " 6: 0.9647887323943662,\n",
+              " 7: 0.9436619718309859,\n",
+              " 8: 0.9366197183098591}"
             ]
           },
           "metadata": {},
-          "execution_count": 114
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rJX5M50CgPsr",
+        "outputId": "765952a4-0b61-4afb-f852-a700b4e2f360"
+      },
+      "source": [
+        "#all_keys = k_values.keys()\n",
+        "#all_values = k_values.values()\n",
+        "#max_value = max(all_values)\n",
+        "#max_value = max(k_values.keys(), key=(lambda k: k_values[k]))\n",
+        "print(\"The best value for k is: \", max(k_values.keys(),key=(lambda k: k_values[k])))\n",
+        "print(\"The accuracy is: \", max(k_values.values()))\n"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The best value for k is:  2\n",
+            "The accuracy is:  0.9859154929577465\n"
+          ]
         }
       ]
     },
